syntax = "proto3";

option java_package = "com.ruckuswireless.grpcdemo";
option java_outer_classname = "HelloWorldProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);

  rpc LotsOfGreetings (stream HelloRequest) returns (HelloResponse);

  rpc LotsOfReplies (HelloRequest) returns (stream HelloResponse);

  rpc BidiHello (stream HelloRequest) returns (stream HelloResponse);
}



message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
}